Separando Decks Em mais componentes